--- a/app/src/main/res/layout/activity_hiragana.xml
+++ b/app/src/main/res/layout/activity_hiragana.xml
@@ -84,7 +84,7 @@
                         />
 
                     <Button
-                        android:id="@+id/buttonhiragana_i"
+                        android:id="@+id/buttonhiragana_e"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
