--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -51,7 +51,7 @@
 
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/button_hiragana"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -66,7 +66,7 @@
                 android:layout_height="15dp" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/button_katakana"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -86,7 +86,7 @@
                 app:srcCompat="@drawable/percakapan_harian" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/button_percakapan"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
@@ -106,7 +106,7 @@
                 app:srcCompat="@drawable/budaya_jepang" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/button_budaya"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
