--- a/app/src/main/res/layout/activity_halaman_soal.xml
+++ b/app/src/main/res/layout/activity_halaman_soal.xml
@@ -6,4 +6,183 @@
     android:layout_height="match_parent"
     tools:context=".halaman_soal">
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="180dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/soal"
+            />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        <!-- Here you put the rest of your current view-->
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+            <!-- bla bla bla-->
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
+
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:text="SOAL NOMOR 1"
+                android:textSize="40dp"
+                android:textAlignment="center"/>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+
+            <Button
+                android:id="@+id/button_audio_soal"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:text="Play"
+                />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+
+            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:stretchColumns="*">
+
+            <TableRow android:background="#ffff">
+
+                <Button
+                    android:id="@+id/buttonkajawaban_1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:text=""
+                    android:textColor="#406882"
+                    android:visibility="invisible"/>
+
+                <Button
+                    android:id="@+id/buttonjawaban_2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:text="A"
+                    android:textColor="#406882" />
+
+                <Button
+                    android:id="@+id/buttonkajawaban_1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:text=""
+                    android:textColor="#406882"
+                    android:visibility="invisible"/>
+
+                <Button
+                    android:id="@+id/buttonjawaban_2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:text="B"
+                    android:textColor="#406882" />
+                <Button
+                    android:id="@+id/buttonjawaban_2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:text=""
+                    android:textColor="#406882"
+                    android:visibility="invisible"/>
+
+            </TableRow>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp" />
+
+                <TableRow android:background="#ffff">
+
+                    <Button
+                        android:id="@+id/buttonkajawaban_1"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:text=""
+                        android:textColor="#406882"
+                        android:visibility="invisible"/>
+
+                    <Button
+                        android:id="@+id/buttonjawaban_2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:text="C"
+                        android:textColor="#406882" />
+
+                    <Button
+                        android:id="@+id/buttonkajawaban_1"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:text=""
+                        android:textColor="#406882"
+                        android:visibility="invisible"/>
+
+                    <Button
+                        android:id="@+id/buttonjawaban_2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:text="D"
+                        android:textColor="#406882" />
+                    <Button
+                        android:id="@+id/buttonjawaban_2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:text=""
+                        android:textColor="#406882"
+                        android:visibility="invisible"/>
+
+                </TableRow>
+
+            </TableLayout>
+
+
+
+
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="250dp" />
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
