--- a/app/src/main/res/layout/activity_katakana.xml
+++ b/app/src/main/res/layout/activity_katakana.xml
@@ -87,7 +87,7 @@
                         android:textColor="#406882" />
 
                     <Button
-                        android:id="@+id/buttonkatakana_0"
+                        android:id="@+id/buttonkatakana_o"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
