--- a/app/src/main/res/layout/activity_halaman_audio.xml
+++ b/app/src/main/res/layout/activity_halaman_audio.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgTitle"
             android:layout_width="174dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
