--- a/app/src/main/res/layout/activity_halaman_soal.xml
+++ b/app/src/main/res/layout/activity_halaman_soal.xml
@@ -48,6 +48,7 @@
 
 
             <TextView
+                android:id="@+id/txtSoal"
                 android:layout_width="250dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
